--- a/package.json
+++ b/package.json
@@ -13,7 +13,15 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio"
+    "db:studio": "drizzle-kit studio",
+    "flowcore:setup": "flowcore data-core apply -f flowcore.yaml",
+    "flowcore:dev": "flowcore scenario local -f flowcore.local.development.yaml -s now -e http://localhost:3000/api/flowcore/transformer -H \"X-Secret: $OVOTIME_API_KEY\"",
+    "flowcore:dev:backlog": "flowcore scenario local --pageSize 10 --timeout 30000 -f flowcore.local.development.yaml -e http://localhost:3000/api/flowcore/transformer -H \"X-Secret: $OVOTIME_API_KEY\"",
+    "flowcore:validate": "flowcore data-core validate -f flowcore.yaml",
+    "flowcore:status": "flowcore data-core list",
+    "docker:up": "docker-compose up -d",
+    "docker:down": "docker-compose down",
+    "docker:logs": "docker-compose logs -f"
   },
   "dependencies": {
     "@flowcore/pathways": "^0.16.3",
