refactor: migrate to pg library and restructure database initialization
- Removed drizzle-orm and related configurations, transitioning to pg for database interactions.
- Updated database connection logic to use a connection pool for improved performance.
- Implemented a comprehensive database initialization function to create necessary tables and enums.
- Refactored event transformers to utilize the new database structure and connection methods.
- Enhanced error handling and logging for database operations.

--- a/package.json
+++ b/package.json
@@ -10,10 +10,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "db:generate": "drizzle-kit generate",
-    "db:migrate": "drizzle-kit migrate",
-    "db:push": "drizzle-kit push",
-    "db:studio": "drizzle-kit studio",
+    "db:init": "npx tsx scripts/db-init.ts",
+    "db:test": "npx tsx scripts/db-test.ts",
     "flowcore:setup": "flowcore data-core apply -f flowcore.yaml",
     "flowcore:dev": "flowcore scenario local -f flowcore.local.development.yaml -s now -e http://localhost:3000/api/flowcore/transformer -H \"X-Secret: $OVOTIME_API_KEY\"",
     "flowcore:dev:backlog": "flowcore scenario local --pageSize 10 --timeout 30000 -f flowcore.local.development.yaml -e http://localhost:3000/api/flowcore/transformer -H \"X-Secret: $OVOTIME_API_KEY\"",
@@ -26,8 +24,8 @@
   "dependencies": {
     "@flowcore/pathways": "^0.16.3",
     "@neondatabase/serverless": "^1.0.1",
-    "drizzle-orm": "^0.44.2",
     "next": "15.3.5",
+    "pg": "^8.16.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-is": "^19.1.0",
@@ -46,14 +44,13 @@
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/uuid": "^10.0.0",
-    "drizzle-kit": "^0.31.4",
     "eslint": "^9",
     "eslint-config-next": "15.3.5",
     "jest": "^30.0.4",
     "jest-environment-jsdom": "^30.0.4",
-    "pg": "^8.16.3",
     "tailwindcss": "^4",
     "ts-jest": "^29.4.0",
+    "tsx": "^4.20.3",
     "typescript": "^5"
   }
 }
