feat: enhance deployment and documentation for Flowcore integration
- Added new deployment scripts to package.json for Vercel, including production and preview commands.
- Updated README.md to clarify the critical role of Flowcore in the event sourcing architecture, emphasizing its necessity for data operations.
- Revised Flowcore setup documentation to highlight mandatory requirements and detailed data flow processes.
- Improved clarity in event sourcing explanations and setup instructions to ensure proper understanding for developers.

--- a/package.json
+++ b/package.json
@@ -19,7 +19,12 @@
     "flowcore:status": "flowcore data-core list",
     "docker:up": "docker-compose up -d",
     "docker:down": "docker-compose down",
-    "docker:logs": "docker-compose logs -f"
+    "docker:logs": "docker-compose logs -f",
+    "deploy": "vercel --prod",
+    "deploy:preview": "vercel",
+    "deploy:env": "vercel env pull .env.production",
+    "prod:db:test": "NODE_ENV=production npm run db:test",
+    "neon:test": "npx tsx scripts/test-neon-connection.ts"
   },
   "dependencies": {
     "@flowcore/pathways": "^0.16.3",
