--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,11 @@ jobs:
         DATABASE_URL: postgresql://postgres:postgres@localhost:5432/ovotime_test
         NODE_ENV: production
         SKIP_ENV_VALIDATION: true
+        # Mock values for build validation only
+        FLOWCORE_API_KEY: "test-key-for-build-validation"
+        OVOTIME_API_KEY: "test-key-for-build-validation"
+        FLOWCORE_TENANT: "test-tenant"
+        FLOWCORE_API_URL: "https://test.example.com"
 
   security:
     name: Security Scan
