--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,8 @@
 {
-  "framework": "nextjs",
-  "buildCommand": "yarn build",
-  "outputDirectory": ".next",
-  "installCommand": "yarn install --frozen-lockfile",
-
-  "build": {
-    "env": {
-      "NODE_ENV": "production"
-    }
-  },
   "functions": {
     "app/api/**/*.ts": {
       "maxDuration": 30
     }
   },
-  "regions": ["iad1"],
-  "github": {
-    "enabled": true,
-    "autoAlias": false,
-    "silent": true
-  }
+  "regions": ["dub1"]
 } 
